# zendesk-etl

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  Dockerfile  README.md  bootstrap.py  gemini.py  main.py  pyproject.toml  query.py  transform.py  zendesk.py
.github/workflows/: build-and-push.yml  daily-sync.yml
