[project]
name = "zendesk-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "html2text>=2025.4.15",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.56",
]
